--- a/charts/sysdig/templates/clusterrole.yaml
+++ b/charts/sysdig/templates/clusterrole.yaml
@@ -79,6 +79,14 @@ rules:
     - /metrics
     verbs:
     - get
+  - apiGroups:
+    - storage.k8s.io
+    resources:
+    - storageclasses
+    verbs:
+    - get
+    - list
+    - watch
 {{- if .Values.psp.create  }}
   - apiGroups:
       - "policy"
